# airbyte-cortex-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cortex_service/: api_models.py  chunking.py  loggin_config.py  main.py  security.py  services.py  validation.py
scripts/: client.py
spikes/: day_02_semantic_validation.py
tests/integration/: test_api.py
tests/unit/: test_chunking.py
