[project]
name = "airbyte-cortex-service"
version = "0.1.0"
description = "AI-ready data pre-processing for Airbyte."
authors = [
    {name = "Kai",email = "ngominhkhoa2006@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "unstructured[local-inference] (>=0.18.14,<0.19.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
