[tool.poetry]
name = "airbyte-cortex-service"
version = "0.1.0"
description = "AI-ready data pre-processing for Airbyte."
authors = ["Kai <ngominhkhoa2006@gmail.com>"]
readme = "README.md"
packages = [
    {include = "cortex-service"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
unstructured = {extras = ["local-inference"], version = ">=0.18.14,<0.19.0"}
sentence-transformers = ">=5.1.0,<6.0.0"
scikit-learn = ">=1.7.1,<2.0.0"
torch = ">=2.8.0,<3.0.0"
numpy = ">=2.3.2,<3.0.0"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
pydantic = {extras = ["email"], version = ">=2.11.7,<3.0.0"}
python-dotenv = ">=1.1.1,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
